# HDRPhotoViewer

./: .gitignore  CMakeLists.txt  HDRViewer-setup.ps1  HDRViewer.ilk  README.md  Setup.cmd  app.manifest
src/: main.cpp
